# patient-api

./: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.API  Dockerfile.Feeder  Dockerfile.Migrator  LICENSE  README.md  api.http  docker-compose.yml
.github/workflows/: general.yaml
.sqlx/: query-001f6c61473609c245ab9291f5140fee22dda77c218ab00dd6ae98213291afe0.json  query-6d9e507fce4d72b0bbc0bd6135de384ab88fe4ae54e5e3dbb6fa1f136a06e685.json  query-72937c192a08deb5b0c60fc8ab1ddf5d9e3ce9d03c407935d48759bb97388529.json  query-891c64475877f0fa332674ae1d0022774b20d347ca57942c1fb91d1f1a54b290.json  query-f5aa9b42874c19d74212192745358f3717ce3add9ac0d264c4a80d5b1653d33f.json  query-f8434b59170e0f4813c66e09ed8719b2f92b35c73b87af6c62ff38b74870ff5a.json
api/: Cargo.toml
api/configuration/: local.yaml  production.yaml
api/src/: main.rs  telemetry.rs
configuration/: base.yaml  production.yaml
feeder/: Cargo.toml
feeder/src/: main.rs
lib_api/: Cargo.toml
lib_api/src/: lib.rs
lib_api/src/api/: api_doc.rs  api_error.rs  configuration.rs  mod.rs  startup.rs
lib_api/src/api/routes/: health.rs  mod.rs
lib_api/src/api/routes/patients/: get.rs  get_all.rs  mod.rs  post.rs
lib_api/src/application/: contracts.rs  delete_patient.rs  get_all_patients.rs  get_patient_by_id.rs  mod.rs
lib_api/src/domain/: birth_date.rs  given.rs  mod.rs  patient.rs
lib_api/src/infrastructure/: mod.rs  patient_db_model.rs
lib_api/tests/: helpers.rs
lib_api/tests/api/: health.rs  mod.rs
lib_api/tests/api/patients/: create_patient.rs  delete_patient.rs  get_all_patients.rs  get_patient.rs  update_patient.rs
migrations/: 20250124070047_create_patient_table.sql
scripts/: init_infrastructure.sh
src/: lib.rs  main.rs
src/api/: api_doc.rs  api_error.rs  configuration.rs  mod.rs  startup.rs
src/api/routes/patients/: delete.rs  get.rs  get_all.rs  mod.rs  patient_response.rs  post.rs  put.rs
src/application/: contracts.rs  create_patient.rs  mod.rs  update_patient.rs
src/domain/: birth_date.rs  family.rs  gender.rs  given.rs  mod.rs  name_id.rs  patient.rs  version.rs
src/infrastructure/: mod.rs  patient_db_model.rs  postgres_repository.rs
tests/: helpers.rs
tests/api/patients/: create_patient.rs  delete_patient.rs  get_all_patients.rs  get_patient.rs  mod.rs  update_patient.rs
