[package]
name = "patient_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "patient_api"

[dependencies]
actix-web = "4"
anyhow = "1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
thiserror = "2"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
secrecy = { version = "0.10.3", features = ["serde"] }
config = "0.15"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
serde_json = "1"
