[package]
name = "patient_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "patient_api"

[dependencies]
actix-web = "4"
anyhow = "1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
thiserror = "2"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
secrecy = { version = "0.10.3", features = ["serde"] }
config = "0.15"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.28.0"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", features = ["tokio"] }
opentelemetry = "0.27.1"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
serde_json = "1"
