[workspace]
resolver = "2"
members = [
    "lib_api",
    "api",
    "feeder"
]

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
