[package]
name = "lib_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = "0.4"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = { version = "5", features = ["actix_extras", "uuid"] }
async-trait = "0.1"
tracing = "0.1"
serde-aux = "4"
secrecy = { version = "0.10.3", features = ["serde"] }
config = "0.15"
tracing-actix-web = "0.7"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
anyhow = { workspace = true }
tokio = { workspace = true }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
serde_json = "1"
